--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "8d9fc6
 p3-challenger = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
 p3-util = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
 rand = { version = "0.9.2" }
+itertools = { version = "0.14.0" }
 
 [features]
 default = []
