--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ rand = { version = "0.9.2" }
 itertools = { version = "0.14.0" }
 
 [features]
-default = []
+default = [ "parallel" ]
 parallel = ["p3-maybe-rayon/parallel"]
